--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -8,7 +8,6 @@
     android:descendantFocusability="blocksDescendants"
     android:padding="16dp">
 
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="150dp"
@@ -45,6 +44,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:ellipsize="start"
+        android:lines="2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/text_title"
         app:layout_constraintTop_toBottomOf="@+id/text_title"
         tools:text="@string/genre" />
